<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>wheel_odom</name>
  <version>0.0.1</version>
  <description>Wheel encoder odometry for ACUK(Autonomus Cart Upgrade Kit)</description>
  <maintainer email="strixz.self@gmail.com">user</maintainer>
  <license>Apache License 2.0</license>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  
  <exec_depend>slam_toolbox</exec_depend>
  
  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>